name:           paradocs
version:        1.0.0
cabal-version:  >= 1.8
build-type:     Simple
license:        MIT
license-file:   LICENSE
copyright:      Copyright (C) 2014 Pasberth
homepage:       https://github.com/pasberth/paradocs
bug-reports:    https://github.com/pasberth/paradocs/issues
author:         Pasberth
maintainer:     Pasberth <pasberth@gmail.com>
stability:      experimental
synopsis:       Yet another lightweight markup language
description:
  TODO

category:       Tools

library
  ghc-options:    -Wall -Werror -O2
  build-depends:
      base
    , mtl
    , lens
    , control-bool
    , control-monad-loop
    , hashable
    , unordered-containers
    , split
    , filepath
    , directory
    , ansi-wl-pprint
  exposed-modules:
    Language.Paradocs,
    Language.Paradocs.EscapeEnv,
    Language.Paradocs.File,
    Language.Paradocs.MonadStorage,
    Language.Paradocs.PrettyPrint,
    Language.Paradocs.Renderer,
    Language.Paradocs.RendererState,
    Language.Paradocs.Rule,
    Language.Paradocs.RuleEnv,
    Language.Paradocs.RuleName,
    Language.Paradocs.Token,
    Language.Paradocs.Types

executable paradocs
  hs-source-dirs: Executable
  main-is:        Paradocs.hs
  ghc-options:    -Wall -O2
  build-depends:
      base
    , ansi-wl-pprint
    , paradocs

test-suite test-readinstr
  type:                 exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is: ReadInstructionSpec.hs
  build-depends:
      base
    , unordered-containers
    , paradocs
    , hspec